Setting up branches and paths

--- a/.github/workflows/sphinx-build.yml
+++ b/.github/workflows/sphinx-build.yml
@@ -1,8 +1,10 @@
 name: build sphinx document
 on: 
   push:
+    branches:
+      - docs
     paths:
-      - source/**
+      - 'source/**'
 jobs:
   main:
     name: build sphinx document
